k8s/monitoring/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
  annotations:
    cloud.google.com/backend-config: '{"default": "grafana-backend-config"}'
spec:
  selector:
    app: grafana
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
